fixup! Add Lance connector